# fusion-plugin

./: .packcheck.ignore  .travis.yml  CHANGELOG.md  LICENSE  NOTICE  README.md  appveyor.yml  cabal.project  cabal.project.ghc-head  flake.nix  fusion-plugin.cabal  index.html  stack.yaml
.github/workflows/: haskell.yml
design/: README.md  join-constr-app.hs  let-expr-fusion.hs  rec-binder-example.core  rec-binder-example.hs
master/: Fusion-Plugin.html  doc-index.html  index.html
master/src/: Fusion.Plugin.html
src/Fusion/: Plugin.hs
src/Fusion/Plugin/: Common.h  Common.hs  Fuse.hs  Ghc.hs  Ghc860.hs  Ghc900.hs  Ghc920.hs  Ghc922.hs  Ghc930.hs  Ghc940.hs  GhcHead.hs  Inspect.hs  Types.hs
v0.2.1/: Fusion-Plugin.html  doc-index.html  doc-index.json  index.html
v0.2.1/src/: Fusion.Plugin.html  README.md
