cabal-version:       2.2

name:                fusion-plugin
version:             0.1.0.0
synopsis:            A plugin that tries to inline join points of interest
-- description:
homepage:            https://github.com/composewell/fusion-plugin
bug-reports:         https://github.com/composewell/fusion-plugin/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Pranay Sashank
maintainer:          pranaysashank@gmail.com
copyright:           Pranay Sashank
category:            Development
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Fusion.Plugin.Types
                       Fusion.Plugin
  build-depends:       base >= 4.0 && < 5.0
                     , syb  >= 0.7 && < 0.8
                     , ghc  >= 8.0
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wunrecognised-warning-flags
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  default-language:    Haskell2010
