cabal-version:       2.2

name:                fusion-plugin
version:             0.1.0.0
synopsis:            GHC plugin to make stream fusion more predictable.
-- description:
homepage:            https://github.com/composewell/fusion-plugin
bug-reports:         https://github.com/composewell/fusion-plugin/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Pranay Sashank
maintainer:          pranaysashank@composewell.com
copyright:           (c) 2019 Composewell Technologies
category:            Development
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Fusion.Plugin.Types
                       Fusion.Plugin
  build-depends:       base >= 4.0 && < 5.0
                     , syb  >= 0.7 && < 0.8
                     , ghc
  hs-source-dirs:      src
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Wunrecognised-warning-flags
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  default-language:    Haskell2010
