cabal-version:       2.2

name:                fusion-plugin
version:             0.2.8
synopsis:            GHC plugin to make stream fusion more predictable.
description:
  This GHC plugin provides the programmer with a way to annotate types
  and functions using various annotations from the
  <https://hackage.haskell.org/package/fusion-plugin-types fusion-plugin-types>
  package, via GHC's @ANN@ pragma. The annotations are used during
  compilation to eliminate intermediate constructors by automatically
  enforcing inlining within GHC where fusion is needed.  The plugin also
  provides annotations to verify and report that specific types are
  actually eliminated from the function in the final generated Core. It
  also provides debugging mechanisms to dump the Core for a specific
  function or report if the Core size blows up due to aggressive
  optimizations.
  .
  This plugin was primarily motivated by
  <https://streamly.composewell.com streamly> but it can
  be used in general.
homepage:            https://github.com/composewell/fusion-plugin
bug-reports:         https://github.com/composewell/fusion-plugin/issues
license:             Apache-2.0
license-file:        LICENSE
tested-with:
      GHC==8.10.7
    , GHC==9.0.2
    , GHC==9.2.8
    , GHC==9.4.7
    , GHC==9.6.3
    , GHC==9.8.4
    , GHC==9.10.3
    , GHC==9.12.4
    , GHC==9.14.1
author:              Pranay Sashank
maintainer:          streamly@composewell.com
copyright:           (c) 2019 Composewell Technologies
category:            Development
extra-doc-files:
    CHANGELOG.md
    NOTICE
    README.md
    design/README.md
    design/join-constr-app.hs
    design/rec-binder-example.core
    design/rec-binder-example.hs

source-repository head
    type: git
    location: https://github.com/composewell/fusion-plugin

library
  exposed-modules:     Fusion.Plugin
  other-modules:       Fusion.Plugin.Common
                     , Fusion.Plugin.Fuse
                     , Fusion.Plugin.Inspect
  include-dirs:        src
  install-includes:    Fusion/Plugin/Common.h
  build-depends:       base             >= 4.0     && < 5
                     , containers       >= 0.5.6.2 && < 0.9
                     , directory        >= 1.2.2.0 && < 1.4
                     , filepath         >= 1.4     && < 1.6
                     , ghc              >= 7.10.3  && < 9.15
                     , syb              >= 0.7     && < 0.8
                     , template-haskell >= 2.16    && < 2.25
                     , transformers     >= 0.4     && < 0.7

                     , fusion-plugin-types >= 0.1.1 && < 0.2
  if impl(ghc < 9.0)
    build-depends: time >= 1.5 && < 1.16

  hs-source-dirs:      src
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-unsafe

  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations
      -Wno-x-partial

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  default-language:    Haskell2010
